# Cooking-Core

./: .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: master.yml  pr.yml
cooking_core/: conftest.py  manage.py
cooking_core/accounts/: apps.py  consumers.py  routing.py
cooking_core/accounts/managers/: account.py  user.py
cooking_core/accounts/migrations/: 0001_initial.py  0002_alter_account_account_number.py  0003_account_display_image_account_display_name.py
cooking_core/accounts/models/: __init__.py  account.py  user.py
cooking_core/accounts/serializers/: account.py
cooking_core/accounts/tests/: test_rest_api.py
cooking_core/accounts/tests/fixtures/: accounts.py
cooking_core/accounts/views/: account.py
cooking_core/authentication/: apps.py
cooking_core/authentication/serializers/: login.py
cooking_core/authentication/views/: login.py
cooking_core/blocks/: apps.py
cooking_core/blocks/migrations/: 0001_initial.py
cooking_core/blocks/models/: block.py
cooking_core/blocks/serializers/: block.py
cooking_core/blocks/views/: block.py
cooking_core/comments/: apps.py  urls.py
cooking_core/comments/filters/: comment.py
cooking_core/comments/migrations/: 0001_initial.py  0002_comment_balance.py  0003_rename_balance_comment_amount.py  0004_alter_comment_amount.py  0005_alter_comment_amount.py
cooking_core/comments/models/: __init__.py  comment.py
cooking_core/comments/serializers/: comment.py
cooking_core/comments/views/: comment.py
cooking_core/config/: apps.py  models.py  serializers.py  views.py
cooking_core/config/migrations/: 0001_initial.py
cooking_core/core/utils/: cryptography.py  misc.py  settings.py  types.py
cooking_core/general/: authentication.py  balance.py  permissions.py
cooking_core/general/models/: __init__.py  custom_model.py
cooking_core/general/tests/fixtures/: __init__.py
cooking_core/general/utils/: collections.py  cryptography.py  misc.py  pytest.py
cooking_core/project/: asgi.py  urls.py
cooking_core/project/settings/: __init__.py  aws.py  base.py  channels.py  custom.py  docker.py  envvars.py  logging.py  rest_framework.py
cooking_core/project/settings/templates/: settings.dev.py  settings.unittests.py
cooking_core/recipes/: admin.py  apps.py  urls.py
cooking_core/recipes/filters/: recipe.py
cooking_core/recipes/migrations/: 0001_initial.py  0002_rename_title_recipe_name.py  0003_recipe_image_url.py  0004_recipe_created_date_recipe_modified_date.py  0005_recipe_balance.py  0006_remove_recipe_image_url_recipe_image.py
cooking_core/recipes/models/: __init__.py  recipe.py
cooking_core/recipes/serializers/: recipe.py  withdraw.py
cooking_core/recipes/views/: recipe.py  withdraw.py
scripts/: dockerized-core-run.sh  entrypoint.sh  production_data.py
